test/compile_errors/stage1/obj/global_variable_initializer_must_be_constant_expression.zig
extern fn foo() i32;
const x = foo();
export fn entry() i32 { return x; }

// global variable initializer must be constant expression
//
// tmp.zig:2:11: error: unable to evaluate constant expression
